# toolchains_cc.bzl

./: .bazelignore  .gitignore  BUILD  BUILD.tpl  MODULE.bazel  MODULE.tpl.bazel  Notes.md  README.md  bins.BUILD.tpl  generate_repo.py  http_archive.tpl.bazel  repackage_apk.sh  repackage_deb.sh  toolchain.BUILD.tpl  toolchains.csv  toolchains_cc.bzl
.github/workflows/: run_examples.yml
c++/: BUILD
clang/: BUILD
clang/19.1.7/: BUILD
constraint/: BUILD
examples/hello_world/: BUILD  MODULE.bazel
impl/: alpine.bzl  host_detect.bzl  ubuntu.bzl
infra/binutils/: Dockerfile  build_binutils_linux.sh
infra/gcc/: Dockerfile  build_gcc_linux.sh
infra/llvm/: Dockerfile  build_llvm_linux.sh
repo_gen/: BUILD.tpl  MODULE.bazel.tpl  generate_repo.py  runtimes.csv  runtimes.json  toolchain.csv  toolchain.json  toolchains.csv
repo_gen/runtimes/: BUILD  BUILD.tpl
repo_gen/toolchain/: BUILD  BUILD.tpl
repo_gen/toolchains/: BUILD.tpl
runtimes/: BUILD
runtimes/glibc/: BUILD
runtimes/glibc/2.27/: BUILD
runtimes/glibc/2.31/: BUILD
runtimes/libcxx/: BUILD
runtimes/libcxx/19.1.7/: BUILD
runtimes/libstdcxx/: BUILD
runtimes/libstdcxx/10.5.0/: BUILD
runtimes/linux-libc-dev/: BUILD
runtimes/linux-libc-dev/5.4.0/: BUILD
runtimes/msvc/: BUILD
runtimes/msvc/14.43.34808/: BUILD
runtimes/musl/: BUILD
runtimes/musl/1.2.5/: BUILD
runtimes/musl/1.2.5-r10/: BUILD
runtimes/musl/1.2.5-r8/: BUILD
runtimes/ucrt/: BUILD
runtimes/ucrt/10.0.22621.0/: BUILD
toolchain/: BUILD
toolchain/llvm/: BUILD
toolchain/llvm/19.1.7/: BUILD
toolchains/: BUILD
toolchains/clang/: BUILD
toolchains/clang/19.1.7/: BUILD
toolchains/llvm/: BUILD
toolchains/llvm/19.1.7/: BUILD
tools/: bazel
