"Your one stop shop for hermetic c/c++ toolchains in Bazel!"
module(name = "toolchains_cc")

bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "0.0.11")

# Problem: Even with xz compression, the total bin size for all the platforms is still quite large.
#          We prioritize minimizing the size of downloaded bins in CI.
# Solution: Split the platforms and individual toolchain distributions into multiple archives to only download what is required.
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "llvm-19.1.7-linux-x86_64",
    url = "https://github.com/reutermj/toolchains_cc/releases/download/binaries/llvm-19.1.7-linux-x86_64.tar.xz",
    sha256 = "2dc7c2d6804eb5cd139f63e03f9e9c1c7ccef2494f71d71995758f5ea58e70c1",
)
http_archive(
    name = "musl-1.2.5-linux-x86_64",
    url = "https://github.com/reutermj/toolchains_cc/releases/download/binaries/musl-1.2.5-r10-linux-x86_64.tar.xz",
    sha256 = "5c2ba292f20013f34f6553000171f488c38bcd497472fd0586d2374c447423ff",
)
http_archive(
    name = "glibc-2.31-linux-x86_64",
    url = "https://github.com/reutermj/toolchains_cc/releases/download/binaries/glibc-2.31-linux-x86_64.tar.xz",
    sha256 = "bd7c3ef414caaca260fb0a00aa5942954726a906594321b18395fa1fd3bfcc4f",
)
http_archive(
    name = "libcxx-19.1.7-linux-x86_64",
    url = "https://github.com/reutermj/toolchains_cc/releases/download/binaries/libcxx-19.1.7-linux-x86_64.tar.xz",
    sha256 = "6d144468b2b8d0d0a9a50a4aacffaf5ed02d813009dbcbfb5d3c66856a5c9de9",
)
