module(name = "hello_world_test")

bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "toolchains_cc.bzl")
local_path_override(
    module_name = "toolchains_cc.bzl",
    path = "../..",
)

cxx_toolchain = use_repo_rule("@toolchains_cc.bzl", "cxx_toolchain")
cxx_toolchain(
    name = "llvm_toolchain",
)

register_toolchains(
    "@llvm_toolchain",
    dev_dependency = True,
)
