module(name = "hello_world_test")

bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "toolchains_cc")
local_path_override(
    module_name = "toolchains_cc",
    path = "../..",
)

cxx_toolchains = use_extension("@toolchains_cc//:toolchains_cc.bzl", "cxx_toolchains")
cxx_toolchains.declare(
    name = "ubuntu_libcxx",
    vendor = "ubuntu",
    cxx_std_lib = "libc++",
)
cxx_toolchains.declare(
    name = "ubuntu_libstdcxx",
    vendor = "ubuntu",
    cxx_std_lib = "libstdc++",
)
cxx_toolchains.declare(
    name = "alpine_libcxx",
    vendor = "alpine",
    cxx_std_lib = "libc++",
)
cxx_toolchains.declare(
    name = "alpine_libstdcxx",
    vendor = "alpine",
    cxx_std_lib = "libstdc++",
)
use_repo(
    cxx_toolchains,
    "ubuntu_libcxx",
    "ubuntu_libstdcxx",
    "alpine_libcxx",
    "alpine_libstdcxx",
)

register_toolchains(
    "@alpine_libstdcxx",
    "@alpine_libcxx",
    "@ubuntu_libstdcxx",
    "@ubuntu_libcxx",
    dev_dependency = True,
)
